--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,41 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <dependencies>
+        <!--START -  Core dependencies-->
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin</artifactId>
             <version>1.6.1</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <optional>true</optional>
+        </dependency>
+        
+        <dependency>
+            <groupId>io.ebean</groupId>
+            <artifactId>ebean</artifactId>
+            <version>11.15.6</version>
+        </dependency>
+
+        <!-- support for query beans -->
+        <dependency>
+            <groupId>io.ebean</groupId>
+            <artifactId>ebean-querybean</artifactId>
+            <version>11.2.1</version>
+        </dependency>
+
+        <!-- java annotation processor to generate query beans -->
+        <dependency>
+            <groupId>io.ebean</groupId>
+            <artifactId>querybean-generator</artifactId>
+            <version>11.1.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <!--END -  Core dependencies-->
         
         <!--START - Testing Framework & Libraries-->
         <dependency>
