--- a/pom.xml
+++ b/pom.xml
@@ -17,35 +17,37 @@
             <artifactId>javalin</artifactId>
             <version>1.6.1</version>
         </dependency>
+                        
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
+            <type>jar</type>
+        </dependency>
         
+        <dependency>
+            <groupId>com.j256.ormlite</groupId>
+            <artifactId>ormlite-jdbc</artifactId>
+            <version>5.1</version>
+        </dependency>
+                
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.197</version>
+            <scope>runtime</scope>
+        </dependency>
+        <!--END -  Core dependencies-->
+        
+        <!--START - Supporting dependencies-->
+      
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.20</version>
             <optional>true</optional>
         </dependency>
-        
-        <dependency>
-            <groupId>io.ebean</groupId>
-            <artifactId>ebean</artifactId>
-            <version>11.15.6</version>
-        </dependency>
-
-        <!-- support for query beans -->
-        <dependency>
-            <groupId>io.ebean</groupId>
-            <artifactId>ebean-querybean</artifactId>
-            <version>11.2.1</version>
-        </dependency>
-
-        <!-- java annotation processor to generate query beans -->
-        <dependency>
-            <groupId>io.ebean</groupId>
-            <artifactId>querybean-generator</artifactId>
-            <version>11.1.3</version>
-            <scope>provided</scope>
-        </dependency>
-        <!--END -  Core dependencies-->
+        <!--END - Supporting dependencies-->
         
         <!--START - Testing Framework & Libraries-->
         <dependency>
@@ -66,7 +68,14 @@
             <version>1.1.1</version>
             <scope>test</scope>
         </dependency>        
-        <!--END - Testing Framework & Libraries-->    
+        <!--END - Testing Framework & Libraries-->
+        
+         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1212.jre7</version>
+        </dependency>
+       
     </dependencies>
     
     <build>
