--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <postgresql.version>9.4.1212.jre7</postgresql.version>
         <jacoco.version>0.7.9</jacoco.version>
         <slf4j.version>1.7.13</slf4j.version>
+        <jackson.version>2.9.5</jackson.version>
     </properties>
     <dependencies>
         <!--START -  Core dependencies-->
@@ -34,6 +35,24 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
                         
         <dependency>
